Fix 'see overall' button vertical alignment

--- a/app/components/areas/Sidebar/style.scss
+++ b/app/components/areas/Sidebar/style.scss
@@ -101,6 +101,8 @@
         width: 100%;
         display: block;
         box-sizing: border-box;
+        height: 40px;
+        line-height: 18px;
         padding: 11px 0;
         text-align: center;
         border: 1px solid $bg-color-2;
